# ChangeLog for net-irc/kvirc
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-irc/kvirc/ChangeLog,v 1.110 2010/07/13 13:33:16 arfrever Exp $

*kvirc-4.1_pre4666 (13 Jul 2010)

  13 Jul 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -kvirc-4.0_pre4200.ebuild, -kvirc-4.0_pre4466.ebuild,
  +kvirc-4.1_pre4666.ebuild:
  Version bump.

  10 Jul 2010; Markos Chandras <hwoarang@gentoo.org>
  kvirc-4.1_pre4624.ebuild:
  Stable on amd64 wrt bug #326149

  07 Jul 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  kvirc-4.1_pre4624.ebuild:
  x86 stable wrt security bug #326149

*kvirc-4.1_pre4624 (06 Jul 2010)

  06 Jul 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +kvirc-4.1_pre4624.ebuild:
  Version bump.

*kvirc-4.0_pre4466 (15 Jun 2010)

  15 Jun 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -kvirc-4.0_pre3636.ebuild, -kvirc-4.0_pre3831.ebuild,
  -kvirc-4.0_pre3921.ebuild, -kvirc-4.0_pre4000.ebuild,
  +kvirc-4.0_pre4466.ebuild:
  Version bump.

  14 Jun 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  kvirc-4.0_pre4200.ebuild:
  x86 stable wrt bug #320261

  25 May 2010; Markos Chandras <hwoarang@gentoo.org>
  kvirc-4.0_pre4200.ebuild:
  Stable on amd64 wrt bug #320261

  09 Apr 2010; Markos Chandras <hwoarang@gentoo.org>
  kvirc-4.0_pre4000.ebuild:
  Stable on amd64 wrt bug #311351

  25 Mar 2010; Christian Faulhammer <fauli@gentoo.org>
  kvirc-4.0_pre3921.ebuild:
  stable x86, bug 304009

*kvirc-4.0_pre4200 (22 Mar 2010)

  22 Mar 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +kvirc-4.0_pre4200.ebuild:
  Version bump.

  07 Mar 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  kvirc-4.0_pre3921.ebuild, kvirc-4.0_pre4000.ebuild, kvirc-9999.ebuild:
  Delete "crypt" USE flag (bug #307345).

*kvirc-4.0_pre4000 (21 Feb 2010)

  21 Feb 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +kvirc-4.0_pre4000.ebuild: