@@ -1,7 +1,9 @@
 DIST kvirc-4.1_pre4624.tar.bz2 5266909 RMD160 5440ffa17e6c3993dd85c17f8f9e66de07e7a1b6 SHA1 29d3d764496295a2e1dc171962ff7729a04fa6de SHA256 93ed359bc7bf4fdf2539965bfd58421c64309d542580c7784c2f30985180adc4
 DIST kvirc-4.1_pre4666.tar.bz2 5269288 RMD160 d72def4252592e6ef4fd7f52cd792976dca2ea0f SHA1 be9764bdf794fc2e783d3ceebc395b215fe68570 SHA256 1ca3b6ccb8cc82d3dc2cee285dd64a429ad0acf7dcd3ac24b524693bb5f679a7
+DIST kvirc-4.1_pre4696.tar.bz2 5267172 RMD160 0c1a909d7a61acd778741a41b8bf76261a34bbc8 SHA1 52923abc50e23d65e2ac65f48491e7a16abfba47 SHA256 a341b4364b936a04451a1e445db53ca8bbfea14c1ef29ac5502f7ef13672f3e6
 EBUILD kvirc-4.1_pre4624.ebuild 2962 RMD160 625121178c1c08c5dae97691f8bb5de7b305b1c5 SHA1 0b39ccc533dfda03d2e4f0a534eb3396adec406b SHA256 29f46a111d70af7007f667755912da0c2dd80cdf005c362655c331db461efd90
 EBUILD kvirc-4.1_pre4666.ebuild 2983 RMD160 757c4185d1bd51b515490f98a96e7a50280688bd SHA1 0eef3d7ee80c33c13e71d77ae6074d5e83b30c76 SHA256 7a472e79b2ee4f1dfe0e44052cd478759c7a74c602dfd34fefdca0651751dc53
+EBUILD kvirc-4.1_pre4696.ebuild 2983 RMD160 e25b17d7bbfc14a665bb2fd0ba0ce0241062874f SHA1 01a242978821a9decfd99335da0cf6df5bec0b7e SHA256 7b615802816118a4e3f5f122f78459f90f8d1918c28730935c9cae5be3979588
 EBUILD kvirc-9999.ebuild 3013 RMD160 67a280b9663bd63de07946df86f1089712a310e8 SHA1 3a185f33ef8c728c1470f721875e1da7d8c62537 SHA256 fc3e52787c1ed62647f80fd19509c1449136c73f3d07ae1c3ee339e3905282d1
-MISC ChangeLog 17227 RMD160 00911a137286efdd0f0dd7d13c176d01816fc986 SHA1 b5b6b8986de2c489fa21967d646c08ea1dd78ed0 SHA256 3d67475da46c189d4f5062bdfb0777348e2347edef0bef0e836ac2e4df509769
+MISC ChangeLog 17380 RMD160 27c44e319749e6b8ed27c1d2e36d42ebab0afd9f SHA1 01a9ff02ed2f72ac52acbc295e8ef95feb6e6ed3 SHA256 7ee17f9eccc79a69b75ad5e5a0561d2a22e4628b957ba1cc2d585ef0f2d09b06
 MISC metadata.xml 751 RMD160 24a1e00817e3034d0106d0fddd1ec2bde45f4c8f SHA1 6cd150df6bcff7bc442cdfae41f3792e125483eb SHA256 0d2d3b3de0ee1aa2d68ab5d67795a6aa7e82b93fe8903a7a838352994932ad8f
