@@ -1,6 +1,12 @@
 # ChangeLog for net-irc/kvirc
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/kvirc/ChangeLog,v 1.110 2010/07/13 13:33:16 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/kvirc/ChangeLog,v 1.111 2010/07/27 20:52:51 arfrever Exp $
+
+*kvirc-4.1_pre4696 (27 Jul 2010)
+
+  27 Jul 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  +kvirc-4.1_pre4696.ebuild:
+  Version bump.
 
 *kvirc-4.1_pre4666 (13 Jul 2010)
 
